# timescriber

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
experimenting_ipynbs/: testin_time_stamps.ipynb  testing.ipynb
file_output/: test.csv
moderated_usability_note_taker_TUI/: notetaker.css  notetaker.py
stopwatch_TUI/: stopwatch copy.py  stopwatch.py
testing_line_writer/: testing.ipynb
textual-tutorial/: actions05.py  minutes.css  minutes.py  static_update.css  static_update.py
timescriber/: __main__.py  timescriber.css  timescriber.py
timescriber/tools/: get_timestamp.py
timescriber/utilities/: get_timestamp.py  line_writer.py  system_configuration.py  write_markdown_from_csv.ipynb
tool_box/: line_writer.py
